k8s/gitops/workloads/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
